- Allow a window to disable scroll actions
- Process switcher is located at bottom-left part of the display by default

Improved ZX Desktop:
- Allow to enable/disable upper and lower buttons independently
- Allow right click on the device icons located on the lower part of the ZX Desktop

* Fixes:

Remove buffer full indicator when pressing shift+e on External Audio Source window
Fixed alt key pressed when changing to another window by using alt-tab on xwindow, cocoa, sdl1 and sdl2 drivers
Fixed TZX autoload as Real Tape on Spectrum +3
Fixed hotswap ZX80 to ZX81, ZX81 to ZX80
Fixed Amstrad CPC Scroll
Fixed memory map and behaviour on Jupiter Ace: now it's perfect and better than any other emulator
Fixed loading .nex snapshots and Layer 2 not being initialized (fixes errors on Head Over Heels for Next, for example)
Fixed loading .nex snapshots and MMU not managed correctly
Fixed Search menu feature. Now it's enabled by default
Fixed bug saving .ZSF Z88 snapshot when RAM or Memory Card block is not compressed
Fixed showing footer message F5/Button menu
Fixed bug reopening menu when executing run command on debug cpu and --allow-background-windows setting was disabled
Fixed MSX keyclick sound

* Misc Changes:

...

* As always, there are some other minor bugfixes and improvements

----


ZEsarUX 11.0 - David edition. 06 June 2024

This version is dedicated to my brother David. Rest in peace.

* New things added:

Added loading audio from external audio source, like a tape player. This also includes:
- External Audio Source Window: you may see the audio wave, the signal type, and an azimuth assistant which tells you when you have to use the screwdriver ;)
- Spectrum Analyzer (Audio Spectrum I mean): you may see full frequency range of the audio wave

Added ZENG Online feature, which allows you to play to any emulated game on a multiplayer way using a central server
Added ZENG support on all emulated machines
Added ZENG support on curses driver