@@ -1070,6 +1070,7 @@ debug_masks_class debug_masks_class_list[]={
     {"ZENG_ONLINE_CLIENT",VERBOSE_CLASS_ZENG_ONLINE_CLIENT},
     {"INTERFACE1",VERBOSE_CLASS_IF1},
     {"MICRODRIVE",VERBOSE_CLASS_MDR},
+    {"ZXVISION_EVENTS",VERBOSE_CLASS_ZXVISION_EVENTS},
     {"ANYTHINGELSE",VERBOSE_CLASS_ANYTHINGELSE},
     {"",0}  //Siempre este al final
 };
